ingress-controller/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-test
spec:
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8081
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 8082
